--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
 					<input id="cave_seed" type="text" value="Igor" />
 				</div>
 				<div>
-					<label for="cave_fill">Fill <output name="fill_amount" for="cave_fill">40</output>%</label>
-					<input id="cave_fill" type="range" value="40" min="0" max="100" />
+					<label for="cave_fill">Fill <output name="fill_amount" for="cave_fill">47</output>%</label>
+					<input id="cave_fill" type="range" value="47" min="0" max="100" />
 				</div>
 			</fieldset>
 
 			<fieldset class="special">
     		<legend>Generation</legend>
 				<div>
-					<label for="cave_smooth_steps">Steps</label>
+					<label for="cave_smooth_steps">Smooth steps</label>
 					<input id="cave_smooth_steps" type="text" value="5" />
 				</div>
 				<div>
